--- a/react/src/index.css
+++ b/react/src/index.css
@@ -1,5 +1,42 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+:root {
+  --green: #96ee73;
+  --lightgreen: #bfffa6;
+}
+* {
+  box-sizing: border-box;
+  font-family: 'Roboto';
+}
 body {
   margin: 0;
   padding: 0;
+  width: 100%;
   font-family: sans-serif;
+  background: linear-gradient(45deg, var(--green), var(--lightgreen));
+}
+
+@media screen and (min-width: 700px) {
+  .container {
+    min-width: 96vw;
+    max-width: 99vw;
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: auto 9em [content-start] minmax(auto, 900px) [content-end] 9em auto;
+    grid-template-rows: 100px [content-start] auto [content-end] 100px;
+  }
+  .container > * {
+    border: 2px solid black;
+  }
+  nav {
+    grid-row: 1 / 2;
+    grid-column: 1 / -1;
+  }
+  main {
+    grid-row: content;
+    grid-column: content;
+  }
+  footer {
+    grid-column: 1 / -1;
+    background: orange;
+  }
 }
