--- a/react/src/index.css
+++ b/react/src/index.css
@@ -12,29 +12,56 @@ body {
   padding: 0;
   width: 100%;
   font-family: sans-serif;
-  background: linear-gradient(45deg, var(--green), var(--lightgreen));
+  background: linear-gradient(var(--green), var(--lightgreen));
 }
 
 @media screen and (min-width: 700px) {
   .container {
+    display: grid;
     min-width: 96vw;
     max-width: 99vw;
-    display: grid;
     grid-gap: 20px;
-    grid-template-columns: auto 9em [content-start] minmax(auto, 900px) [content-end] 9em auto;
     grid-template-rows: 100px [content-start] auto [content-end] 100px;
   }
-  .container > * {
-    border: 2px solid black;
+  main.todays-games {
+    grid-column: 1 / -1;
+    display: grid;
+    grid-gap: 20px;
   }
   nav {
     grid-row: 1 / 2;
     grid-column: 1 / -1;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: 1fr;
   }
   main {
     grid-row: content;
     grid-column: content;
   }
+
+  main.todays-games {
+    display: grid;
+    grid-template-rows: 90px auto;
+  }
+
+  main.todays-games h3 {
+    text-align: center;
+  }
+
+  div.all-games {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-gap: 30px;
+    grid-auto-flow: dense;
+  }
+
+  div.all-games > * {
+    grid-column: 1fr;
+    text-align: center;
+    box-shadow: 2px 5px 8px #423f11;
+  }
+
   footer {
     grid-column: 1 / -1;
     background: orange;
