--- a/react/src/index.css
+++ b/react/src/index.css
@@ -15,25 +15,18 @@ body {
   background: linear-gradient(var(--green), var(--lightgreen));
 }
 
+.container {
+  display: grid;
+  width: 100%;
+  grid-gap: 20px;
+  grid-template-rows: 100px [content-start] auto [content-end] 100px;
+}
+
 @media screen and (min-width: 700px) {
-  .container {
-    display: grid;
-    min-width: 98vw;
-    max-width: 99vw;
-    grid-gap: 20px;
-    grid-template-rows: 100px [content-start] auto [content-end] 100px;
-  }
   main.todays-games {
     grid-column: 1 / -1;
     display: grid;
     grid-gap: 20px;
-  }
-  nav {
-    grid-row: 1 / 2;
-    grid-column: 1 / -1;
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: 1fr;
   }
   main {
     grid-row: content;
