--- a/react/src/components/navigation/TopNav.css
+++ b/react/src/components/navigation/TopNav.css
@@ -2,6 +2,43 @@ nav {
   grid-row: 1 / 2;
   grid-column: 1 / -1;
   display: grid;
+  grid-gap: 15px;
   grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: 1fr;
+  grid-template-rows: 1fr 3fr 1fr;
+  padding: 2px 40px;
+  justify-content: center;
+  align-items: center;
+  background: rgba(128, 128, 128, 0.788);
+}
+nav > * {
+  grid-row: 2 / 3;
+}
+
+div.nav-logo {
+  grid-column: 1 / 5;
+}
+
+div.nav-links {
+  grid-column: 5 / -1;
+  display: grid;
+  grid-gap: 15px;
+  text-align: center;
+  grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+}
+
+div.nav-links a {
+  width: 120px;
+  border-radius: 3px;
+  padding: 10px;
+  text-decoration: none;
+  color: black;
+  transition: all 0.2s ease-out;
+}
+
+div.nav-links a:hover {
+  background: rgba(255, 255, 255, 0.452);
+}
+
+div.nav-links a:first-of-type {
+  grid-column: -5 / -4;
 }
