--- a/react/src/pages/GamesListPage.css
+++ b/react/src/pages/GamesListPage.css
@@ -1,20 +1,31 @@
 @media screen and (min-width: 700px) {
   main.todays-games {
     grid-column: 1 / -1;
-    display: grid;
-    grid-template-rows: 90px auto;
+    grid-template-columns: repeat(12, 1fr);
   }
+}
+
+div.page-title {
+  grid-column: 2 / -2;
+}
+main.todays-games {
+  display: grid;
+  grid-template-columns: repeat(30, 1fr);
 }
 
 main.todays-games h2 {
   text-align: center;
 }
 
+div.big-img {
+  grid-column: 1 /-1;
+}
+
 div.all-games {
+  grid-column: 2 / -2;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   grid-gap: 30px;
-  margin: 0 30px;
 }
 
 div.competition-live {
