--- a/react/src/pages/GameDetailsPage.css
+++ b/react/src/pages/GameDetailsPage.css
@@ -1,6 +1,6 @@
 main {
   grid-template-rows: 30px auto 1fr;
-  grid-template-columns: 200px auto 200px;
+  grid-template-columns: 200px minmax(auto, 50%) 200px;
   justify-content: center;
   align-items: end;
   text-align: center;
@@ -22,6 +22,23 @@ div.away.team {
 
 div.prediction {
   grid-column: 1 /-1;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: 1fr 1fr;
+}
+div.prediction div.prediction-bar {
+  grid-row: 2 /3;
+  grid-column: 2 /-2;
+  display: flex;
+  justify-content: center;
+}
+div.prediction-bar > * {
+  border: 2px solid black;
+}
+div.prediction > *:first-of-type {
+  grid-column: 1 / -1;
+  grid-row: 1 / 2;
+  width: 100%;
 }
 
 div.team {
