--- a/react/src/pages/GameDetailsPage.css
+++ b/react/src/pages/GameDetailsPage.css
@@ -1,4 +1,5 @@
 main {
+  margin-top: 30px;
   grid-template-rows: 30px auto 1fr;
   grid-template-columns: 200px minmax(auto, 50%) 200px;
   justify-content: center;
@@ -15,6 +16,7 @@ div.home.team {
 div.score {
   grid-column: 2 / 3;
   align-self: center;
+  font-size: 3em;
 }
 div.away.team {
   grid-column: 3 / 4;
@@ -31,10 +33,12 @@ div.prediction div.prediction-bar {
   grid-column: 2 /-2;
   display: flex;
   justify-content: center;
+  height: 15px;
 }
-div.prediction-bar > * {
-  border: 2px solid black;
+div.prediction-bar > div {
+  border: 1px solid rgb(0, 0, 0);
 }
+
 div.prediction > *:first-of-type {
   grid-column: 1 / -1;
   grid-row: 1 / 2;
@@ -45,18 +49,40 @@ div.team {
   grid-row: 2 / 3;
 }
 
+div.team h4 {
+  height: 30px;
+}
+
+div.img-container {
+  min-height: 100px;
+}
+
+div.team img {
+  animation: open 0.6s 1;
+}
+
 @media screen and (max-width: 700px) {
   main {
-    grid-template-columns: repeat(12, 1fr);
+    grid-template-columns: 20px repeat(18, 1fr) 20px;
   }
   div.home.team {
-    grid-column: 2 / auto;
+    grid-column: 2 / span 5;
   }
   div.score {
-    grid-column: 6/8;
-    border: 2px solid black;
+    grid-column: 8/14;
+    font-size: 0.9em;
   }
   div.away.team {
-    grid-column: auto / -2;
+    grid-column: span 5 / -2;
+  }
+}
+
+@keyframes open {
+  from {
+    height: 2%;
+    transform: scaleY(0.1);
+  }
+  to {
+    transform: scaleY(1);
   }
 }
