--- a/react/src/pages/GameDetailsPage.css
+++ b/react/src/pages/GameDetailsPage.css
@@ -33,10 +33,14 @@ div.prediction div.prediction-bar {
   grid-column: 2 /-2;
   display: flex;
   justify-content: center;
-  height: 15px;
+  height: 55px;
+  border: 1px solid rgba(51, 45, 45, 0.726);
+  box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.795);
+  border-radius: 3px;
 }
-div.prediction-bar > div {
-  border: 1px solid rgb(0, 0, 0);
+div.prediction-bar > div.percentage {
+  min-width: 8%;
+  transition: all 0.8s ease-out;
 }
 
 div.prediction > *:first-of-type {
@@ -54,7 +58,7 @@ div.team h4 {
 }
 
 div.img-container {
-  min-height: 100px;
+  min-height: 160px;
 }
 
 div.team img {
@@ -79,10 +83,12 @@ div.team img {
 
 @keyframes open {
   from {
-    height: 2%;
     transform: scaleY(0.1);
+    opacity: 0;
   }
   to {
+    opacity: 1;
     transform: scaleY(1);
   }
 }
+
