--- a/react/src/components/navigation/TopNav.css
+++ b/react/src/components/navigation/TopNav.css
@@ -3,6 +3,7 @@
   --navcolor: rgb(71, 67, 67);
 }
 nav {
+  z-index: 900;
   height: var(--navheight);
   grid-row: 1 / 2;
   grid-column: 1 / -1;
@@ -58,6 +59,12 @@ button#hamburger {
 }
 
 @media screen and (max-width: 700px) {
+  nav {
+    padding: 6px;
+  }
+  div.nav-logo {
+    grid-column: 1 / 9;
+  }
   div.nav-links {
     position: absolute;
     top: var(--navheight);
@@ -66,6 +73,7 @@ button#hamburger {
     grid-gap: 1px;
     grid-template-columns: 98vw;
     background: var(--navcolor);
+    animation: display-nav 0.2s ease-out 1;
   }
 
   nav div.nav-links > a:first-of-type {
@@ -90,12 +98,29 @@ button#hamburger {
   }
 
   div.nav-links.hidden {
-    transform: scaleY(0) translateY(-200);
-    opacity: 0;
-    display: none;
+    animation: hide-nav 0.2s ease-out 1;
+    transform: scaleY(0);
   }
 
   button#hamburger i.hidden {
     transform: scaleX(0);
+  }
+
+  @keyframes display-nav {
+    from {
+      transform: scaleY(0) translateY(-200px);
+    }
+    to {
+      transform: scaleY(1) translateY(0);
+    }
+  }
+
+  @keyframes hide-nav {
+    from {
+      transform: scaleY(1) translateY(0);
+    }
+    to {
+      transform: scaleY(0) translateY(-200px);
+    }
   }
 }
