style league table

--- a/react/src/index.css
+++ b/react/src/index.css
@@ -24,7 +24,10 @@ img {
 }
 .grid {
   display: grid;
+  justify-content: center;
+  align-items: center;
 }
+
 .container {
   display: grid;
   width: 100%;
