--- a/react/src/components/tables/LeagueTable.css
+++ b/react/src/components/tables/LeagueTable.css
@@ -1,4 +1,88 @@
 div.table {
   grid-column: 1 / -1;
-  
+  text-align: center;
+}
+/* naming the columns */
+div.league-row {
+  grid-template-columns: repeat(10, 1fr);
+  grid-gap: 10px;
+}
+.img-container-small {
+  display: grid;
+  align-items: center;
+  justify-content: center;
+}
+
+div.league-row > *:first-of-type {
+  grid-column: 1 / 2;
+}
+div.league-row > div.img-container-small,
+div.league-row > *:nth-of-type(2) {
+  grid-column: 2 / 3;
+}
+div.league-row > h4.team-name,
+div.league-row > *:nth-of-type(3) {
+  grid-column: 3 / 5;
+}
+div.league-row > h4.played-games,
+div.league-row > *:nth-of-type(4) {
+  grid-column: -4 / -3;
+  font-weight: normal;
+}
+div.league-row > h4.goal-diff,
+div.league-row > *:nth-of-type(5) {
+  grid-column: -3 / -2;
+  font-weight: normal;
+}
+div.league-row > h4.points,
+div.league-row > *:nth-of-type(6) {
+  grid-column: -2 / -1;
+}
+
+/* listed team */
+div.standing {
+  grid-template-columns: repeat(10, 1fr);
+  grid-gap: 30px;
+}
+
+div.standing > * {
+  grid-column: 1 /-1;
+}
+
+div.listed-team {
+  grid-template-columns: repeat(10, 1fr);
+  grid-template-rows: 1fr 50px 1fr;
+}
+
+div.listed-team > * {
+  grid-row: 2 / 3;
+  min-height: 50px;
+}
+
+div.labels {
+  background: var(--darkgreen);
+}
+
+@media screen and (max-width: 700px) {
+  div.league-row > h4.played-games,
+  div.league-row > *:nth-of-type(4) {
+    grid-column: 5 / 7;
+    font-weight: normal;
+  }
+
+  div.league-row > h4.goal-diff,
+  div.league-row > *:nth-of-type(5) {
+    grid-column: 7 / 9;
+    font-weight: normal;
+  }
+
+  div.league-row > h4.points,
+  div.league-row > *:nth-of-type(6) {
+    grid-column: 9/ 11;
+  }
+  div.league-row,
+  div.listed-team h1 {
+    font-size: 15px;
+    padding-top: 5px;
+  }
 }
