--- a/react/src/components/tables/LeagueTable.css
+++ b/react/src/components/tables/LeagueTable.css
@@ -1,6 +1,7 @@
 div.table {
   grid-column: 1 / -1;
   text-align: center;
+  animation: fade-in 0.5s ease-out 1;
 }
 /* naming the columns */
 div.league-row {
@@ -11,6 +12,8 @@ div.league-row {
   display: grid;
   align-items: center;
   justify-content: center;
+  padding: 10px;
+  max-height: auto;
 }
 
 div.league-row > *:first-of-type {
@@ -50,6 +53,9 @@ div.standing > * {
 }
 
 div.listed-team {
+  margin-top: 60px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid rgb(201, 196, 196);
   grid-template-columns: repeat(10, 1fr);
   grid-template-rows: 1fr 50px 1fr;
 }
@@ -57,6 +63,10 @@ div.listed-team {
 div.listed-team > * {
   grid-row: 2 / 3;
   min-height: 50px;
+}
+
+div.team-name {
+  align-self: end;
 }
 
 div.labels {
@@ -84,5 +94,18 @@ div.labels {
   div.listed-team h1 {
     font-size: 15px;
     padding-top: 5px;
+  }
+  div.listed-team {
+    margin-top: 0;
+    font-size: 12px;
+  }
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
   }
 }
